// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Properly computes diffs # 1`] = `
Object {
  "id": "1glasses",
  "parentId": "0jewelry",
  "sortOrder": 0,
  "type": "move",
}
`;

exports[`Properly computes diffs # 2`] = `
Object {
  "id": "1glasses",
  "parentId": "2accessories",
  "sortOrder": 0,
  "type": "move",
}
`;

exports[`Properly computes diffs # 3`] = `
Object {
  "id": "2accessories",
  "parentId": "4apparel",
  "sortOrder": 0,
  "type": "move",
}
`;
